--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -411,7 +411,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     width: auto;
     height: 200px;
     background: var(--lightgrey) no-repeat center center;
-    background-size: cover;
+    background-size: contain;
 }
 
 .post-card-content-link {
@@ -625,7 +625,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
     margin: 0 auto;
     padding: 70px 100px 0;
     min-height: 230px;
-    font-family: Georgia, serif;
+    font-family: 'Gochi Hand', 'Nanum Gothic', serif;
     font-size: 2.2rem;
     line-height: 1.6em;
     background: #fff;
